overflow fix

--- a/src/pages/recommend/recommend.scss
+++ b/src/pages/recommend/recommend.scss
@@ -7,5 +7,9 @@ page-recommend {
         height:100%;
       }
 
+    .scroll-content {
+        overflow-y: hidden;
+    }
+
 
 }
